--- a/index.html
+++ b/index.html
@@ -183,6 +183,7 @@
             const startDate = new Date(document.getElementById('startDate').value);
 	    const maturityDate = new Date(startDate);
 	    maturityDate.setMonth(maturityDate.getMonth() + term);
+	    maturityDate.setDate(maturityDate.getDate() + 1);
 	    const timeDiff = maturityDate - startDate;
 	    const totalDays = Math.round(timeDiff / (1000 * 60 * 60 * 24));
 	    const formatter = new Intl.NumberFormat('en-US', {
@@ -214,6 +215,7 @@
             breakdownBody.innerHTML = "";
 
             let currentDate = new Date(startDate);
+	    currentDate.setMonth(currentDate.getMonth() + 1);
 
             for (let m = 0; m < term; m++) {
                 const nextDate = new Date(currentDate);
