--- a/index.html
+++ b/index.html
@@ -112,6 +112,9 @@
 <body>
     <div class="container">
         <h1>CD Interest Calculator</h1>
+	<p style="text-align: center;">
+		<a href="apy-converter.html">Go to Interest Rate/APY Converter</a>
+	</p>
         <label for="amount">Initial Deposit Amount ($):</label>
         <input type="number" id="amount" placeholder="e.g. 1000">
 
