--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin: 40px;
             background-color: #f7f9fc;
             color: #ed1941;
+	    align-items: baseline;
+	    display: flex;
         }
         .container {
             max-width: 800px;
+	    width: 800px;
             margin: auto;
             background: white;
             padding: 30px;
@@ -41,8 +43,6 @@
 	    width: 100%
 	}
         button {
-            margin-top: 30px;
-            width: 100%;
             padding: 12px;
             background-color: #ed1941;
             color: #000000;
@@ -50,9 +50,15 @@
             border-radius: 5px;
             font-size: 16px;
             cursor: pointer;
+	    transition: 0.3s;
         }
+	button:not(.openbtn) {
+            margin-top: 30px;
+	    width: 100%;
+	}
         button:hover {
             background-color: #cd2e46;
+	    opacity: 1;
         }
         .result {
             margin-top: 30px;
@@ -106,15 +112,62 @@
 		margin-top: 5px;
 
 	}
+	.sidepanel  {
+		width: 0;
+		position: fixed;
+		z-index: 1;
+		height: auto;
+		top: 0;
+		left: 0;
+		background-color: white;
+		overflow-x: hidden;
+		transition: 0.5s;
+		padding-top: 60px;
+		border-bottom-right-radius: 10px;
+                border-radius: 10px;
+                box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+		padding-bottom: 20px;
+	}
 
+	.sidepanel a {
+		padding: 8px 8px 8px 32px;
+		text-decoration: none;
+		font-size: 25px;
+		color: #818181;
+		display: block;
+		transition: 0.3s;
+		height: auto;
+	}
+
+	.sidepanel a:hover {
+  		color: #cd2e46;
+	}
+
+	.sidepanel .closebtn {
+  		position: absolute;
+  		top: 0;
+  		right: 25px;
+  		font-size: 36px;
+                color: #ed1941;
+	}
+
+	.openbtn {
+  		font-size: 20px;
+  		cursor: pointer;
+  		color: white;
+  		padding: 10px 15px;
+	}
     </style>
 </head>
 <body>
+    <div id="sidepanel" class="sidepanel">
+  	<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
+        <a style="color:rgb(237,25,65);">CD Calculator</a>
+        <a href="apy-converter.html">APY Converter</a>
+    </div>
+    <button class="openbtn" onclick="openNav()">☰</button>  
     <div class="container">
         <h1>CD Interest Calculator</h1>
-	<p style="text-align: center;">
-		<a href="apy-converter.html">Go to Interest Rate/APY Converter</a>
-	</p>
         <label for="amount">Initial Deposit Amount ($):</label>
         <input type="number" id="amount" placeholder="e.g. 1000">
 
@@ -170,6 +223,8 @@
             </table>
         </div>
     </div>
+
+
 
     <script>
 	function setToday() {
@@ -259,6 +314,12 @@
 	    document.getElementById('totalDays').textContent = totalDays;
 	    document.getElementById('result').style.display = "block";
         }
+	function openNav() {
+		document.getElementById("sidepanel").style.width = "250px";
+	}
+	function closeNav() {
+		document.getElementById("sidepanel").style.width = "0";
+	}
     </script>
 </body>
 </html>
